WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254466
[UI-side compositing] Unpainted regions (missing tiles) when scrolling with the keyboard
https://bugs.webkit.org/show_bug.cgi?id=254466
Summary
[UI-side compositing] Unpainted regions (missing tiles) when scrolling with t...
Simon Fraser (smfr)
Reported
2023-03-25 11:14:20 PDT
On a long page, if you press the following keys it's possible to get areas of missing tiles: Home/End/Home/End/Page Up/Page Up/Page Up
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-03-25 11:14:40 PDT
rdar://107163092
Simon Fraser (smfr)
Comment 2
2023-03-25 11:21:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11973
EWS
Comment 3
2023-03-25 16:01:39 PDT
Committed
262120@main
(e2ffafdf3851): <
https://commits.webkit.org/262120@main
> Reviewed commits have been landed. Closing PR #11973 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug